fixed the truncate-pipe file

--- a/AntraShare/src/app/feature/setting-page/setting-page.component.scss
+++ b/AntraShare/src/app/feature/setting-page/setting-page.component.scss
@@ -9,7 +9,7 @@
    
   /* Style the logout button */
   .logout-button {
-    background-color: #d9534f;
+    background-color: $theme-color;
     border: none;
     border-radius: 4px;
     color: #fff;
